# keymanager

./: README.md  keymanager-sim.sh  keymanager.sh  requirements.txt
docs/: guard.md  registry.md
keymanager/: __main__.py  core.py
keymanager/util/: constants.py  crypto.py  env.py  types.py  utils.py
tests/: CMakeLists.txt  policy.json  test.cpp  test.py
tests/enclave/: enclave.cpp  enclave.edl
